--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -14,10 +14,10 @@ import { Alert } from "@/components/Alert"
 ## Overview
 
 By the default, we have a basic index template for each of our applications that use Elasticsearch:
+* File Manager Files [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-file-manager-ddb-es/src/elasticsearch/templates/base.ts)
+* Form Builder Forms and Submissions [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-form-builder-so-ddb-es/src/elasticsearch/templates/base.ts)
 * Headless CMS Entries [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-headless-cms-ddb-es/src/elasticsearch/templates/base.ts)
 * Page Builder Pages [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-page-builder-so-ddb-es/src/elasticsearch/templates/base.ts)
-* Form Builder Forms and Submissions [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-form-builder-so-ddb-es/src/elasticsearch/templates/base.ts)
-* File Manager Files [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-file-manager-ddb-es/src/elasticsearch/templates/base.ts)
 
 Each of those templates define how the Elasticsearch index for that particular application will look like when it is created.
 ```info
@@ -26,20 +26,19 @@ Templates are inserted on the installation of each application.
 
 ## Available Template Plugins
 
+### File Manager
+For the File Manager Files we have the [FileElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-file-manager-ddb-es/src/plugins/FileElasticsearchIndexTemplatePlugin.ts).
+
+### Form Builder
+For the Form Builder Forms and Submissions we have the [FormElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-form-builder-so-ddb-es/src/plugins/FormElasticsearchIndexTemplatePlugin.ts).
+
 ### Headless CMS
 For the Headless CMS Entries we have [CmsEntryElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-headless-cms-ddb-es/src/plugins/CmsEntryElasticsearchIndexTemplatePlugin.ts).
 
 We store only the entries into this index.
 
-### File Manager
-For the File Manager Files we have the [FileElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-file-manager-ddb-es/src/plugins/FileElasticsearchIndexTemplatePlugin.ts).
-
 ### Page Builder
 For the Page Builder Pages we have the [PageElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-page-builder-so-ddb-es/src/plugins/definitions/PageElasticsearchIndexTemplatePlugin.ts).
-
-### Form Builder
-For the Form Builder Forms and Submissions we have the [FormElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-form-builder-so-ddb-es/src/plugins/FormElasticsearchIndexTemplatePlugin.ts).
-
 
 ## How To Create Your Own Template?
 
@@ -52,10 +51,16 @@ Let's say you name your custom Headless CMS index template `headless-cms-entries
 You cannot have two templates with the same `order` value that will get applied on the index creation so be careful about that.
 
 3. Each of the template plugin `index_patterns` __MUST__ match contain one of given patterns:
- * `-headless-cms-` for the `CmsEntryElasticsearchIndexTemplatePlugin`
  * `-file-manager$` for the `FileElasticsearchIndexTemplatePlugin`
- * `-page-builder$` for the `PageElasticsearchIndexTemplatePlugin`
  * `-form-builder$` for the `FormElasticsearchIndexTemplatePlugin`
+ * `-headless-cms-` for the `CmsEntryElasticsearchIndexTemplatePlugin`
+ * `-page-builder$` for the `PageElasticsearchIndexTemplatePlugin`
+
+4. We gave our default templates different minimum and maximum `order` values:
+ * File Manager - 0 - 99 (default template value is 50)
+ * Form Builder - 100 - 199(default template value is 150)
+ * Headless CMS - 200 - 299 (default template value is 250)
+ * Page Builder - 300 - 399 (default template value is 350)
 
 Notice that index name patterns for File Manager, Page Builder and Form Builder end with a `$`, which is a pattern end.
 Headless CMS index name contains a bit more data, so we just match the `-headless-cms-`.
@@ -66,9 +71,18 @@ For the example we will use the `CmsEntryElasticsearchIndexTemplatePlugin`.
 ```typescript
 new CmsEntryElasticsearchIndexTemplatePlugin({
     name: "headless-cms-entries-index-custom-example",
+    // apply the index template after the default one.
     order: 251,
     body: {
-        index_patterns: ["*-headless-cms-*"]
+        index_patterns: ["*-headless-cms-*"],
+        mappings: {
+            properties: {
+                // we do not want to map a field with name "jsonFieldName"
+                jsonFieldName: {
+                    enabled: false
+                }
+            }
+        }
     }
 })
 ```
