--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -13,6 +13,8 @@ import { Alert } from "@/components/Alert"
 
 ## Overview
 
+We do not store all the data into the Elasticsearch because there is no need for it (eg. Headless CMS Models and Groups).
+
 By the default, we have a basic index template for each of our applications that use Elasticsearch:
 * File Manager Files [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-file-manager-ddb-es/src/elasticsearch/templates/base.ts)
 * Form Builder Forms and Submissions [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-form-builder-so-ddb-es/src/elasticsearch/templates/base.ts)
@@ -20,9 +22,9 @@ By the default, we have a basic index template for each of our applications that
 * Page Builder Pages [template](https://github.com/webiny/webiny-js/blob/feat/api-elasticsearch/index-template-plugin/packages/api-page-builder-so-ddb-es/src/elasticsearch/templates/base.ts)
 
 Each of those templates define how the Elasticsearch index for that particular application will look like when it is created.
-```info
-Templates are inserted on the installation of each application.
-```
+<Alert type="warning">
+  Elasticsearch index templates are inserted on the installation of each application.
+</Alert>
 
 ## Available Template Plugins
 
@@ -35,8 +37,6 @@ For the Form Builder Forms and Submissions we have the [FormElasticsearchIndexTe
 ### Headless CMS
 For the Headless CMS Entries we have [CmsEntryElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-headless-cms-ddb-es/src/plugins/CmsEntryElasticsearchIndexTemplatePlugin.ts).
 
-We store only the entries into this index.
-
 ### Page Builder
 For the Page Builder Pages we have the [PageElasticsearchIndexTemplatePlugin](https://github.com/webiny/webiny-js/blob/8b1410114a2b9dd7836ff221dd0367cdf3ce9b62/packages/api-page-builder-so-ddb-es/src/plugins/definitions/PageElasticsearchIndexTemplatePlugin.ts).
 
@@ -47,30 +47,53 @@ There are few rules that you will need to follow if you want to successfully cre
 1. The `name` property must be __UNIQUE__, or it will override the existing template.
 Let's say you name your custom Headless CMS index template `headless-cms-entries-index-default` - it will overwrite our default one, so be careful if you do not want to override existing templates.
 
-2. If you want to apply your template (override mapping) of the default template, use the `order` value larger than the template you want to override.
-You cannot have two templates with the same `order` value that will get applied on the index creation so be careful about that.
+2. If you want to apply your template (override mapping) of the default template, use the `order` value greater than the template you want to override.
+You can have two templates with the same `order` value that will get applied on the index creation, but you cannot be sure which one will override which one at that point, so be careful about that.
 
-3. Each of the template plugin `index_patterns` __MUST__ match contain one of given patterns:
- * `-file-manager$` for the `FileElasticsearchIndexTemplatePlugin`
- * `-form-builder$` for the `FormElasticsearchIndexTemplatePlugin`
- * `-headless-cms-` for the `CmsEntryElasticsearchIndexTemplatePlugin`
- * `-page-builder$` for the `PageElasticsearchIndexTemplatePlugin`
+3. Each of the template plugin `index_patterns` __MUST__ match contain one of given regex patterns:
+   * `-file-manager$` for the `FileElasticsearchIndexTemplatePlugin`
+   * `-form-builder$` for the `FormElasticsearchIndexTemplatePlugin`
+   * `-headless-cms-` for the `CmsEntryElasticsearchIndexTemplatePlugin`
+   * `-page-builder$` for the `PageElasticsearchIndexTemplatePlugin`
 
-4. We gave our default templates different minimum and maximum `order` values:
- * File Manager - 0 - 99 (default template value is 50)
- * Form Builder - 100 - 199(default template value is 150)
- * Headless CMS - 200 - 299 (default template value is 250)
- * Page Builder - 300 - 399 (default template value is 350)
+Notice that index name patterns for File Manager, Page Builder and Form Builder end with a `$`, which means that index pattern must end with what is defined.
+Headless CMS index name contains a bit more data, so we just match the `-headless-cms-` anywhere in the index pattern.
 
-Notice that index name patterns for File Manager, Page Builder and Form Builder end with a `$`, which is a pattern end.
-Headless CMS index name contains a bit more data, so we just match the `-headless-cms-`.
+4. We gave our templates different minimum and maximum `order` values:
+ * File Manager - 0 - 99 (the default template value is 50)
+ * Form Builder - 100 - 199(the default template value is 150)
+ * Headless CMS - 200 - 299 (the default template value is 250)
+ * Page Builder - 300 - 399 (the default template value is 350)
 
 ### Example
-For the example we will use the `CmsEntryElasticsearchIndexTemplatePlugin`.
 
+Headless CMS index template plugin `CmsEntryElasticsearchIndexTemplatePlugin` example:
 ```typescript
-new CmsEntryElasticsearchIndexTemplatePlugin({
+import { CmsEntryElasticsearchIndexTemplatePlugin } from "@webiny/packages/api-headless-cms-ddb-es/plugins/CmsEntryElasticsearchIndexTemplatePlugin";
+const plugin = new CmsEntryElasticsearchIndexTemplatePlugin({
     name: "headless-cms-entries-index-custom-example",
+    // apply the index template after the default one.
+    order: 251,
+    body: {
+        index_patterns: ["*-headless-cms-*"],
+        mappings: {
+            properties: {
+                // we do not want to map a field with name "jsonFieldName"
+                jsonFieldName: {
+                    enabled: false
+                }
+            }
+        }
+    }
+})
+```
+
+
+Page Builder index template plugin `PageElasticsearchIndexTemplatePlugin` example:
+```typescript
+import { PageElasticsearchIndexTemplatePlugin } from "@webiny/api-page-builder-so-ddb-es/plugins/definitions/PageElasticsearchIndexTemplatePlugin";
+const plugin = new PageElasticsearchIndexTemplatePlugin({
+    name: "page-builder-pages-index-custom-example",
     // apply the index template after the default one.
     order: 251,
     body: {
