feat: add danger note about es

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -11,6 +11,10 @@ import { Alert } from "@/components/Alert"
 
 </Alert>
 
+<Alert type="danger">
+  This article requires advanced knowledge of Elasticsearch.
+</Alert>
+
 ## Overview
 
 We do not store all the data into the Elasticsearch because there is no need for it (eg. Headless CMS Models and Groups).
@@ -69,7 +73,7 @@ Headless CMS index name contains a bit more data, so we just match the `-headles
 
 #### Overview
 
-Allowed index names can contain dashes (-), underscores (_), numbers (0-9) and english letters (a-z).
+Index names can contain dashes (-), underscores (_), numbers (0-9) and english letters (a-z).
 
 Index name __MUST__ always be lowercase, and it cannot start with dash, underscore or a number.
 
