feat(elasticsearch-index-template): update pb template

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -148,7 +148,7 @@ const plugin = new PageElasticsearchIndexTemplatePlugin({
     // apply the index template after the default one.
     order: 351,
     body: {
-        index_patterns: ["*-headless-cms-*"],
+        index_patterns: ["*-page-builder"],
         mappings: {
             properties: {
                 // we do not want to map a field with name "jsonFieldName"
