feat(elasticsearch-index-template): update pb template

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -118,7 +118,7 @@ You can see how the index is created in [this](https://github.com/webiny/webiny-
 
 ### Examples
 
-Headless CMS index template plugin `CmsEntryElasticsearchIndexTemplatePlugin` example:
+Headless CMS index template plugin `CmsEntryElasticsearchIndexTemplatePlugin`, which disables mappings on a `largeText` field in `de` locale:
 ```typescript
 import { CmsEntryElasticsearchIndexTemplatePlugin } from "@webiny/api-headless-cms-ddb-es/plugins/CmsEntryElasticsearchIndexTemplatePlugin";
 const plugin = new CmsEntryElasticsearchIndexTemplatePlugin({
@@ -129,8 +129,8 @@ const plugin = new CmsEntryElasticsearchIndexTemplatePlugin({
         index_patterns: ["*-headless-cms-de-*"],
         mappings: {
             properties: {
-                // we do not want to map a field with name "jsonFieldName"
-                jsonFieldName: {
+                // we do not want to map a field with name "largeText"
+                largeText: {
                     enabled: false
                 }
             }
@@ -140,7 +140,7 @@ const plugin = new CmsEntryElasticsearchIndexTemplatePlugin({
 ```
 
 
-Page Builder index template plugin `PageElasticsearchIndexTemplatePlugin` example:
+Page Builder index template plugin `PageElasticsearchIndexTemplatePlugin`, which disables indexing on a `largeText` field:
 ```typescript
 import { PageElasticsearchIndexTemplatePlugin } from "@webiny/api-page-builder-so-ddb-es/plugins/definitions/PageElasticsearchIndexTemplatePlugin";
 const plugin = new PageElasticsearchIndexTemplatePlugin({
@@ -151,8 +151,8 @@ const plugin = new PageElasticsearchIndexTemplatePlugin({
         index_patterns: ["*-page-builder"],
         mappings: {
             properties: {
-                // we do not want to map a field with name "jsonFieldName"
-                jsonFieldName: {
+                // we do not want to index a field with name "largeText"
+                largeText: {
                     enabled: false
                 }
             }
