feat(elasticsearch): how to change index name to contain locale

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -12,7 +12,7 @@ import { Alert } from "@/components/Alert"
 </Alert>
 
 <Alert type="danger">
-  This article requires advanced knowledge of Elasticsearch.
+  This article requires advanced knowledge of the Elasticsearch.
 </Alert>
 
 ## Overview
@@ -23,7 +23,7 @@ We use the index templates for our File Manager, Form Builder, Headless CMS and 
 
 In File Manager, Form Builder and Page Builder applications we use one index per tenant and locale, if locale specific indexes is set.
 
-In Headless CMS we use index for each tenant, locale and model combination because of complexity of the data stored into Elasticsearch.
+In Headless CMS we use index for each tenant, locale and model combination because of the complexity of the data stored into Elasticsearch.
 
 By the default, we have a basic index template for each of our applications that use Elasticsearch:
 * File Manager Files [template](https://github.com/webiny/webiny-js/blob/2f55b1d6aea2085f8c46fc73c48157a49cd46ae0/packages/api-file-manager-ddb-es/src/elasticsearch/templates/base.ts)
@@ -48,6 +48,15 @@ Good example on when to change the default template, or add a new one, is when y
 The Japanese Elasticsearch index template will look a lot different from our default one because of different text analyzers and mapping properties.
 
 There is official [Elasticsearch blog](https://www.elastic.co/blog/how-to-implement-japanese-full-text-search-in-elasticsearch) on how to implement Japanese full-text search.
+
+### Enabling Locale In The Index Name
+
+In the version 5.26.0 we introduced an environment variable `WEBINY_ELASTICSEARCH_INDEX_LOCALE` which, when set to `true` - default in 5.26.0, will add a locale code to the created index name.
+Prior to 5.26.0 we did not add the locale in the Page Builder, the Form Builder and the File Manager, and we will not change that for existing projects.
+
+All new projects that are created with  5.26.0, or greater, will have the locale code in the index name.
+
+To read on how to enable locale code in your existing project, created prior to 5.26.0, read [this](/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale) article.
 
 ## Available Template Plugins
 
@@ -107,15 +116,17 @@ Use case for this would be for when you have multiple environments on a single E
 
 #### File Manager
 
-Index name for the File Manager Files is built out of the `tenant id` and `-file-manager` suffix.
+Index name for the File Manager Files is built out of the `tenant id`, `locale code` if enabled, and `-file-manager` suffix.
 If your tenant is a `root` tenant, the index will look like `root-file-manager`.
+If your tenant is a `root` tenant, and you have locale (`en-US`) for index name enabled, the index will look like `root-en-us-file-manager`.
 
 You can see how the index is created in [this](https://github.com/webiny/webiny-js/blob/b615a8a02acf222f6a90c740ebbd7aec5e767218/packages/api-file-manager-ddb-es/src/operations/configurations.ts) file.
 
 #### Form Builder
 
-Index name for the Form Builder Forms and Submissions is built out of the `tenant id` and `-form-builder` suffix.
+Index name for the Form Builder Forms and Submissions is built out of the `tenant id`, `locale code` if enabled, and `-form-builder` suffix.
 If your tenant is a `root` tenant, the index will look like `root-form-builder`.
+If your tenant is a `root` tenant, and you have locale (`jp`) for index name enabled, the index will look like `root-jp-form-builder`.
 
 You can see how the index is created in [this](https://github.com/webiny/webiny-js/blob/3c595a1d7edd07a9763ba3959f954f88fbb3d462/packages/api-form-builder-so-ddb-es/src/configurations.ts) file.
 
@@ -128,8 +139,9 @@ You can see how the index is created in [this](https://github.com/webiny/webiny-
 
 #### Page Builder
 
-Index name for the Page Builder Pages is built out of the `tenant id` and `-page-builder` suffix.
+Index name for the Page Builder Pages is built out of the `tenant id`, `locale code` if enabled, and `-page-builder` suffix.
 If your tenant is a `root` tenant, the index will look like `root-page-builder`.
+If your tenant is a `root` tenant, and you have locale (`de-DE`) for index name enabled, the index will look like `root-de-de-page-builder`.
 
 You can see how the index is created in [this](https://github.com/webiny/webiny-js/blob/3c595a1d7edd07a9763ba3959f954f88fbb3d462/packages/api-page-builder-so-ddb-es/src/operations/configurations.ts) file.
 
