feat(elasticsearch): add repeat step

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
@@ -77,7 +77,10 @@ The [Elasticsearch documentation](https://www.elastic.co/guide/en/elasticsearch/
 #### 6. Verify That New Index Is Working And It Contains All The Data
 Use what ever tool or script you have at your disposal.
 
-#### 7. Deploy The Code For Environment Variable To Have Effect
+#### 7. Repeat Previous Steps For All The Indexes
+You __MUST__ repeat previous steps for of the indexes you have (except Headless CMS ones, of course) because the environment variable you add will affect all of the applications.
+
+#### 8. Deploy The Code For Environment Variable To Have Effect
 ... or set the required environment variable if you have skipped step 2.
 
 
