fix(elasticsearch): build error

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
@@ -1,6 +1,6 @@
 ---
 title: How To Change Elasticsearch Index Name To Contain Locale
-description: Learn how to change Elasticsearch Name To Contain Locale Code.
+description: Learn how to change Elasticsearch index name to contain locale code.
 ---
 
 import { Alert } from "@/components/Alert"
@@ -65,7 +65,8 @@ We will work with the tenant `root`, so the name of existing index is `root-page
 The new Elasticsearch index name will contain the locale your system is on.
 Let's say if the system is on `en-GB` locale, then the new Elasticsearch index name would be `root-en-gb-page-builder`. Note that `GB` is in lower case - that is because Elasticsearch does not support index names with upper case. 
 
-```title="The Action To Be Executed"
+The action to be executed:
+```
 POST /root-page-builder/_clone/root-en-gb-page-builder
 ```
 It might take a while to clone the original index, if you have a lot of data.
