refactor(elasticsearch): change es index article

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
@@ -38,7 +38,7 @@ There are different options on how to approach this problem. If you use one opti
 
 ### Option 1: Renaming The Original Elasticsearch Index
 
-This will cover cloning the existing Elasticsearch index to another one (name which contains the locale code).
+This will cover cloning the existing Elasticsearch index to another one (with name which contains the locale code).
 
 This will NOT change the Elasticsearch index mappings or settings (apply templates) for the new index.
 
@@ -60,7 +60,7 @@ This will produce errors on the input side, so make sure your users know not to 
 #### 4. Figure Out The Name For Your New Elasticsearch Index
 The article [How To Customize Elasticsearch Index Template](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template) contains the information on how we create the index names.
 
-##### Page Builder Index Name Example
+##### __Page Builder Index Name Example__
 We will work with the tenant `root`, so the name of existing index is `root-page-builder`.
 The new Elasticsearch index name will contain the locale your system is on.
 Let's say if the system is on `en-GB` locale, then the new Elasticsearch index name would be `root-en-gb-page-builder`. Note that `GB` is in lower case - that is because Elasticsearch does not support index names with upper case. 
