fix(elasticsearch): article changes according to comments

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template.mdx
@@ -7,7 +7,7 @@ import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="What you'll learn">
 
-- how to customize Elasticsearch Index Template for each application
+- how to customize Elasticsearch index template for each application
 
 </Alert>
 
@@ -21,7 +21,7 @@ import { Alert } from "@/components/Alert"
 
 We use the index templates for our File Manager, Form Builder, Headless CMS and Page Builder applications.
 
-In File Manager, Form Builder and Page Builder applications we use one index per tenant and locale, if locale specific indexes is set.
+In File Manager, Form Builder and Page Builder applications we use one index per tenant and locale, if locale specific indexes are set.
 
 In Headless CMS we use index for each tenant, locale and model combination because of the complexity of the data stored into Elasticsearch.
 
