--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
@@ -7,7 +7,7 @@ import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="What you'll learn">
 
-- how to how to change Elasticsearch Name To Contain Locale Code.
+- how to how to change Elasticsearch index name to contain locale code.
 
 </Alert>
 
